name:                data-ant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Kove-W-O-Salter/data-ant#readme
license:             BSD3
license-file:        LICENSE
author:              Kove W. Ochre-Salter
maintainer:          kove.w.o.salter@gmail.com
copyright:           2018 Kove W. Ochre-Salter
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Kove-W-O-Salter/data-ant
