name:                data-ant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Kove-W-O-Salter/data-ant#readme
license:             MIT
license-file:        LICENSE
author:              Kove W. Ochre-Salter
maintainer:          kove.w.o.salter@gmail.com
copyright:           2018 Kove W. Ochre-Salter
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Ant,
                       Data.Ant.Ast,
                       Data.Ant.AntQ,
                       Data.Ant.Error,
                       Data.Ant.Parser
  build-depends:       base >= 4.7 && < 5,
                       parsec >= 3.1.13.0,
                       template-haskell >= 2.13.0.0,
                       haskell-src-meta >= 0.8.0.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Kove-W-O-Salter/data-ant
